--- a/less/forum.less
+++ b/less/forum.less
@@ -9,14 +9,9 @@ ul.poptag-ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  
   display: flex;
   flex-wrap: wrap;
-  
-  // 使用 gap 替代 margin，排列更整齐，但间距设小一点保持紧凑
-  gap: 6px; 
-  
-  width: 100%;
+  width: fit-content;
 }
 
 li.poptag-li {
