--- a/less/forum.less
+++ b/less/forum.less
@@ -28,7 +28,7 @@ li.poptag-li {
   text-align: center;
   font-size: 0.85em;
   font-weight: 600;
-  margin: 6px;
+  justify-content: center;
   
   // 3. 增加微立体感
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
