--- a/less/forum.less
+++ b/less/forum.less
@@ -12,6 +12,7 @@ ul.poptag-ul {
   display: flex;
   flex-wrap: wrap;
   width: fit-content;
+  justify-content: center;
 }
 
 li.poptag-li {
@@ -28,7 +29,8 @@ li.poptag-li {
   text-align: center;
   font-size: 0.85em;
   font-weight: 600;
-  justify-content: center;
+  margin: 5px;
+  
   
   // 3. 增加微立体感
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
